--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,61 +1,65 @@
 <% layout('layouts/boilerplate') %>
     <link rel="stylesheet" href="/stylesheets/stars.css">
+    <link rel="stylesheet" href="/stylesheets/image-show.css">
 
     <div class="row">
         <div class="col-6">
-            <div id="campgroundCarousel" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-inner">
-                    <% campground.images.forEach((img, i)=> { %>
-                        <div class="carousel-item <%= i === 0 ? 'active' : ''%>  ">
-                            <img src="<%= img.url %>" class="d-block w-100" alt="">
-                        </div>
-                        <% }) %>
-                </div>
-                <% if (campground.images.length> 1) { %>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#campgroundCarousel"
-                        data-bs-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Previous</span>
-                    </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#campgroundCarousel"
-                        data-bs-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Next</span>
-                    </button>
-                    <% } %>
-            </div>
-            <div class="card mb-3">
-                <div class="card-body">
-                    <h5 class="card-title">
-                        <%= campground.title %>
-                    </h5>
-                    <p class="card-text">
-                        Description: <%= campground.description %>
-                    </p>
-                </div>
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item">
-                        Location: <%= campground.location %>
-                    </li>
-                    <li class="list-group-item">
-                        Submitted by <%= campground.author.username %>
-                    </li>
-                    <li class="list-group-item">
-                        Price: $<%= campground.price %>/night
-                    </li>
-                </ul>
-                <% if (currentUser && campground.author.equals(currentUser._id)) { %>
-                    <div class="card-body">
-                        <a href="/campgrounds/<%= campground._id %>/edit" class="card-link btn btn-info">Edit</a>
-                        <form class="d-inline" action="/campgrounds/<%= campground._id %>?_method=DELETE" method="POST">
-                            <button class="btn btn-danger">Delete</button>
-                        </form>
+            <div class="box-shadow">
+                <div id="campgroundCarousel" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                        <% campground.images.forEach((img, i)=> { %>
+                            <div class="img-holder carousel-item <%= i === 0 ? 'active' : ''%>  ">
+                                <img src="<%= img.url %>" class="d-block w-100 img-box" alt="">
+                            </div>
+                            <% }) %>
                     </div>
-                    <% } %>
-                        <div class="card-footer text-muted">
-                            2 days ago
-                            <a href="/campgrounds">All Campgrounds</a>
+                    <% if (campground.images.length> 1) { %>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#campgroundCarousel"
+                            data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#campgroundCarousel"
+                            data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>
+                        <% } %>
+                </div>
+                <div class="card mb-3 des-box">
+                    <div class="card-body">
+                        <h5 class="card-title">
+                            <%= campground.title %>
+                        </h5>
+                        <p class="card-text">
+                            Description: <%= campground.description %>
+                        </p>
+                    </div>
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item">
+                            Location: <%= campground.location %>
+                        </li>
+                        <li class="list-group-item">
+                            Submitted by <%= campground.author.username %>
+                        </li>
+                        <li class="list-group-item">
+                            Price: $<%= campground.price %>/night
+                        </li>
+                    </ul>
+                    <% if (currentUser && campground.author.equals(currentUser._id)) { %>
+                        <div class="card-body">
+                            <a href="/campgrounds/<%= campground._id %>/edit" class="card-link btn btn-info">Edit</a>
+                            <form class="d-inline" action="/campgrounds/<%= campground._id %>?_method=DELETE"
+                                method="POST">
+                                <button class="btn btn-danger">Delete</button>
+                            </form>
                         </div>
+                        <% } %>
+                            <div class="card-footer text-muted">
+                                2 days ago
+                                <a href="/campgrounds">All Campgrounds</a>
+                            </div>
+                </div>
             </div>
         </div>
         <div class="col-6">
