--- a/views/author/general.ejs
+++ b/views/author/general.ejs
@@ -1,4 +1,5 @@
 <% layout('layouts/boilerplate') %>
+    <link rel="stylesheet" href="/stylesheets/image-general.css">
     <div class="row">
         <div class="col-lg-3 offset-md-0 offset-xs-0 offset-sm-0 offset-lg-1">
             <div class="card mb-3">
