"Fix author general"

--- a/views/author/general.ejs
+++ b/views/author/general.ejs
@@ -2,8 +2,8 @@
     <link rel="stylesheet" href="/stylesheets/image-general.css">
     <div class="row">
         <div class="col-lg-3 offset-md-0 offset-xs-0 offset-sm-0 offset-lg-1">
-            <div class="card mb-3">
-                <img class="img-fluid w-100 mt-1"
+            <div class="card mb-3 box-shadow">
+                <img class="img-fluid w-100 img-box"
                     src="https://res.cloudinary.com/ntv2806/image/upload/v1663542432/YelpCamp/qkatbwkoy6f7cdpc5bht.jpg"
                     alt="">
 
@@ -31,8 +31,8 @@
         <div class="col-md-6 offset-md-3 offset-sm-0 offset-lg-1 offset-xs-0">
 
             <div class="row-md-1">
-                <div class="card mb-3 bg-dark text-white border-light">
-                    <div class="card-body">
+                <div class="card mb-3 text-white box-shadow">
+                    <div class="card-body bg-dark tl-radius-4 tr-radius-4">
                         <h5 class="card-title">
                             About me
                         </h5>
@@ -51,8 +51,8 @@
             </div>
 
             <div class="row-md-1">
-                <div class="card mb-3">
-                    <div class="card-body bg-dark text-white border-light">
+                <div class="card mb-3 text-white box-shadow">
+                    <div class="card-body bg-dark tl-radius-4 tr-radius-4">
                         <h5 class="card-title">
                             Education
                         </h5>
@@ -71,8 +71,8 @@
             </div>
 
             <div class="row-md-1">
-                <div class="card mb-3 bg-dark text-white border-light">
-                    <div class="card-body">
+                <div class="card mb-3 text-white box-shadow">
+                    <div class="card-body bg-dark tl-radius-4 tr-radius-4">
                         <h5 class="card-title">
                             Experience
                         </h5>
@@ -94,8 +94,8 @@
             </div>
 
             <div class="row-md-1">
-                <div class="card mb-3">
-                    <div class="card-body bg-dark text-white border-light">
+                <div class="card mb-3 text-white box-shadow">
+                    <div class="card-body bg-dark tl-radius-4 tr-radius-4">
                         <h5 class="card-title">
                             Projects
                         </h5>
