Change part of info

--- a/views/author/info.ejs
+++ b/views/author/info.ejs
@@ -1,44 +1,45 @@
 <% layout('layouts/boilerplate') %>
+    <link rel="stylesheet" href="/stylesheets/info.css">
     <br class="mt-5">
     <br class="mt-5">
     <br class="mt-5">
     <div class="row">
         <div class="col-md-4 offset-md-2 offset-sm-0 offset-xs-0">
             <img src="https://res.cloudinary.com/ntv2806/image/upload/v1663524759/YelpCamp/dqfsgyd0ft9mpzomxwfh.jpg"
-                class="rounded-circle img-thumbnail" alt="">
+                class="rounded-circle img-thumbnail box-shadow" alt="">
         </div>
         <div class="col-md-4">
-            <div class="card mb-3 mt-3 bg-dark border-light">
+            <div class="card mb-3 mt-3 box-shadow">
                 <div class="card-body">
-                    <h5 class="card-title text-white">
+                    <h5 class="card-title text-black">
                         Vinh Thanh Nguyen
                     </h5>
                     <p class="card-text">
                     </p>
                 </div>
                 <ul class="list-group list-group-flush">
-                    <li class="list-group-item bg-dark text-white border-light">
+                    <li class="list-group-item text-black">
                         Date of birth: 28/06/2002
                     </li>
-                    <li class="list-group-item bg-dark text-white border-light">
+                    <li class="list-group-item text-black">
                         Nationality: Vietnamese
                     </li>
-                    <li class="list-group-item bg-dark text-white border-light">
+                    <li class="list-group-item text-black">
                         Education: University of Rochester
                     </li>
-                    <li class="list-group-item bg-dark text-white border-light">
+                    <li class="list-group-item text-black">
                         Occupation: Student
                     </li>
-                    <li class="list-group-item bg-dark text-white border-light">
+                    <li class="list-group-item text-black">
                         Majors: BS Computer Science/ BA Business
                     </li>
-                    <li class="list-group-item bg-dark text-white border-light">
+                    <li class="list-group-item text-black">
                         Height: 190cm (6'2)
                     </li>
-                    <li class="list-group-item bg-dark text-white border-light">
+                    <li class="list-group-item text-black">
                         Hometown: Hanoi, Vietnam
                     </li>
-                    <li class="list-group-item bg-dark text-white border-light">
+                    <li class="list-group-item text-black">
                         Website: <a href="/">MyJourney</a>
                     </li>
                 </ul>
