--- a/views/author/interest.ejs
+++ b/views/author/interest.ejs
@@ -1,6 +1,7 @@
 <% layout('layouts/boilerplate') %>
+    <link rel="stylesheet" href="/stylesheets/interest.css">
     <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-4 offset-1">
             <div class="card mb-3">
                 <div id="campgroundCarousel" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
@@ -57,7 +58,7 @@
             </div>
         </div>
 
-        <div class="col-md-6 offset-md-2 offset-sm-0 offset-xs-0">
+        <div class="col-md-4 offset-md-2 offset-sm-0 offset-xs-0">
             <div class="card mb-3">
                 <div id="lol" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
