--- a/views/author/general.ejs
+++ b/views/author/general.ejs
@@ -24,6 +24,11 @@
                     <li class="list-group-item">
                         Location: Rochester, New York
                     </li>
+                    <li class="list-group-item">
+                        <a class="link" href="https://www.linkedin.com/in/vinh-nguyen-585474224/">LinkedIn</a>
+                        ,
+                        <a class="link" href="https://github.com/vinhngthanh">GitHub</a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -41,10 +46,10 @@
                     </div>
                     <ul class="list-group list-group-flush">
                         <li class="list-group-item">
-                            <a href="/author/about/info">Personal Information</a>
+                            <a class="link" href="/author/about/info">Personal Information</a>
                         </li>
                         <li class="list-group-item">
-                            <a href="/author/about/interest">Interest</a>
+                            <a class="link" href="/author/about/interest">Interest</a>
                         </li>
                     </ul>
                 </div>
@@ -61,10 +66,10 @@
                     </div>
                     <ul class="list-group list-group-flush">
                         <li class="list-group-item">
-                            <a href="/author/education/college">University of Rochester</a>
+                            <a class="link" href="/author/education/college">University of Rochester</a>
                         </li>
                         <li class="list-group-item">
-                            <a href="/author/education/highschool">Hanoi-Amsterdam High School</a>
+                            <a class="link" href="/author/education/highschool">Hanoi-Amsterdam High School</a>
                         </li>
                     </ul>
                 </div>
@@ -81,13 +86,13 @@
                     </div>
                     <ul class="list-group list-group-flush">
                         <li class="list-group-item">
-                            <a href="/author/experience/viettel">Viettel Business Solution Corporation</a>
+                            <a class="link" href="/author/experience/viettel">Viettel Business Solution Corporation</a>
                         </li>
                         <li class="list-group-item">
-                            <a href="/author/experience/university">University of Rochester</a>
+                            <a class="link" href="/author/experience/university">University of Rochester</a>
                         </li>
                         <li class="list-group-item">
-                            <a href="/author/experience/eup">European Plastic Company</a>
+                            <a class="link" href="/author/experience/eup">European Plastic Company</a>
                         </li>
                     </ul>
                 </div>
@@ -104,13 +109,13 @@
                     </div>
                     <ul class="list-group list-group-flush">
                         <li class="list-group-item">
-                            <a href="/">YelpCamp</a>
+                            <a class="link" href="/">YelpCamp</a>
                         </li>
                         <li class="list-group-item">
-                            <a href="/author/projects/numberpuzzle">NumberPuzzle</a>
+                            <a class="link" href="/author/projects/numberpuzzle">NumberPuzzle</a>
                         </li>
                         <li class="list-group-item">
-                            <a href="/author/projects/stocktracker">StockTracker</a>
+                            <a class="link" href="/author/projects/stocktracker">StockTracker</a>
                         </li>
                     </ul>
                 </div>
