--- a/views/author/highschool.ejs
+++ b/views/author/highschool.ejs
@@ -1,21 +1,21 @@
 <% layout('layouts/boilerplate') %>
-
+    <link rel="stylesheet" href="/stylesheets/interest.css">
     <div class="row">
         <div class="col-md-6">
-            <div class="card mb-3">
+            <div class="box-shadow card mb-3">
                 <div id="campgroundCarousel" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
-                        <div class="carousel-item active">
+                        <div class="img-holder carousel-item active">
                             <img src="https://res.cloudinary.com/ntv2806/image/upload/v1663561219/YelpCamp/we3k6j8zgibmasthgsbs.jpg"
-                                class="d-block w-100" alt="">
+                                class="img-box d-block w-100" alt="">
                         </div>
-                        <div class="carousel-item">
+                        <div class="img-holder carousel-item">
                             <img src="https://res.cloudinary.com/ntv2806/image/upload/v1663561219/YelpCamp/a3ppifrvew4fwrdfiepp.jpg"
-                                class="d-block w-100" alt="">
+                                class="img-box d-block w-100" alt="">
                         </div>
-                        <div class="carousel-item">
+                        <div class="img-holder carousel-item">
                             <img src="https://res.cloudinary.com/ntv2806/image/upload/v1663561219/YelpCamp/malpw2giyjxrxgmpzvf0.jpg"
-                                class="d-block w-100" alt="">
+                                class="img-box d-block w-100" alt="">
                         </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#campgroundCarousel"
