--- a/views/author/interest.ejs
+++ b/views/author/interest.ejs
@@ -2,28 +2,28 @@
     <link rel="stylesheet" href="/stylesheets/interest.css">
     <div class="row">
         <div class="col-md-4 offset-1">
-            <div class="card mb-3">
+            <div class="card mb-3 box-shadow">
                 <div id="campgroundCarousel" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
-                        <div class="carousel-item active">
+                        <div class="img-holder carousel-item active">
                             <img src="https://res.cloudinary.com/ntv2806/image/upload/v1663556666/YelpCamp/e11ojqoaxspgkkuxdb0f.jpg"
-                                class="d-block w-100" alt="">
+                                class="d-block w-100 img-box" alt="">
                         </div>
-                        <div class="carousel-item">
+                        <div class="img-holder carousel-item">
                             <img src="https://res.cloudinary.com/ntv2806/image/upload/v1663556666/YelpCamp/unnfn3jhijzzevnndm1o.jpg"
-                                class="d-block w-100" alt="">
+                                class="d-block w-100 img-box" alt="">
                         </div>
-                        <div class="carousel-item">
+                        <div class="img-holder carousel-item">
                             <img src="https://res.cloudinary.com/ntv2806/image/upload/v1663556666/YelpCamp/v3l5webyy1vdpphngwqx.jpg"
-                                class="d-block w-100" alt="">
+                                class="d-block w-100 img-box" alt="">
                         </div>
-                        <div class="carousel-item">
+                        <div class="img-holder carousel-item">
                             <img src="https://res.cloudinary.com/ntv2806/image/upload/v1663556666/YelpCamp/buxmikf53hqfhkbmihj0.jpg"
-                                class="d-block w-100" alt="">
+                                class="d-block w-100 img-box" alt="">
                         </div>
-                        <div class="carousel-item">
+                        <div class="img-holder carousel-item">
                             <img src="https://res.cloudinary.com/ntv2806/image/upload/v1663556666/YelpCamp/ptyvc4kar646nb3vaw1p.jpg"
-                                class="d-block w-100" alt="">
+                                class="d-block w-100 img-box" alt="">
                         </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#campgroundCarousel"
@@ -37,7 +37,7 @@
                         <span class="visually-hidden">Next</span>
                     </button>
                 </div>
-                <div class="card-body bg-dark text-white border-light">
+                <div class="card-body bg-dark text-white border-light des-box">
                     <h5 class="card-title">
                         Football
                     </h5>
@@ -59,24 +59,24 @@
         </div>
 
         <div class="col-md-4 offset-md-2 offset-sm-0 offset-xs-0">
-            <div class="card mb-3">
+            <div class="card mb-3 box-shadow">
                 <div id="lol" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
-                        <div class="carousel-item active">
+                        <div class="img-holder carousel-item active">
                             <img src="https://res.cloudinary.com/ntv2806/image/upload/v1663558147/YelpCamp/mzljygdy58gncmkufawy.png"
-                                class="d-block w-100" alt="">
+                                class="d-block w-100 img-box" alt="">
                         </div>
-                        <div class="carousel-item">
+                        <div class="img-holder carousel-item">
                             <img src="https://res.cloudinary.com/ntv2806/image/upload/v1663558147/YelpCamp/ifdec9m7o98ia7j62pbx.png"
-                                class="d-block w-100" alt="">
+                                class="d-block w-100 img-box" alt="">
                         </div>
-                        <div class="carousel-item">
+                        <div class="img-holder carousel-item">
                             <img src="https://res.cloudinary.com/ntv2806/image/upload/v1663558147/YelpCamp/stgoofqdisklw9mbzpmo.png"
-                                class="d-block w-100" alt="">
+                                class="d-block w-100 img-box" alt="">
                         </div>
-                        <div class="carousel-item">
+                        <div class="img-holder carousel-item">
                             <img src="https://res.cloudinary.com/ntv2806/image/upload/v1663558147/YelpCamp/zxaiizfvc90fiucr6k0s.png"
-                                class="d-block w-100" alt="">
+                                class="d-block w-100 img-box" alt="">
                         </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#lol" data-bs-slide="prev">
@@ -88,7 +88,7 @@
                         <span class="visually-hidden">Next</span>
                     </button>
                 </div>
-                <div class="card-body bg-dark text-white border-light">
+                <div class="card-body bg-dark text-white border-light des-box">
                     <h5 class="card-title">
                         League of Legend
                     </h5>
