--- a/views/author/stocktracker.ejs
+++ b/views/author/stocktracker.ejs
@@ -1,22 +1,23 @@
 <% layout('layouts/boilerplate') %>
+    <link rel="stylesheet" href="/stylesheets/interest.css">
 
     <div class="row">
         <div class="col-md-2 offset-md-5 offset-xs-0 offset-md-0 text-center">
-            <div class="card border-light">
+            <div class="box-shadow card border-light">
                 <img src="https://res.cloudinary.com/ntv2806/image/upload/v1663641020/YelpCamp/Icon_axluf0.png"
-                    class="img-thumbnail" alt="">
+                    class="img-fluid img-radius-5" alt="">
             </div>
         </div>
     </div>
     <div class="row">
-        <div class="col-md-12 text-center bg-dark mt-3">
+        <div class="box-shadow col-md-12 text-center bg-dark mt-3">
             <h5 class="mt-3 text-white">My Stock Tracker</h5>
             <p class="text-white">This app allows you to add your stocks to a recycler list and persist it with
                 database!</p>
         </div>
     </div>
 
-    <div class="row bg-dark mt-3">
+    <div class="box-shadow row bg-dark mt-2">
         <div class="col-md-3 mt-2 mb-2">
             <img src="https://res.cloudinary.com/ntv2806/image/upload/v1663640896/YelpCamp/img2_rofapf.png"
                 class="d-block w-100" alt="">
@@ -34,7 +35,7 @@
                 class="d-block w-100" alt="">
         </div>
     </div>
-    <div class="row bg-dark mb-3">
+    <div class="box-shadow row bg-dark mb-3 mt-2">
         <div class="col-md-12 mt-3 mb-3">
             <div class="card mb-6 border-light bg-dark">
                 <div class="card-body">
