--- a/views/author/viettel.ejs
+++ b/views/author/viettel.ejs
@@ -1,17 +1,17 @@
 <% layout('layouts/boilerplate') %>
-
+    <link rel="stylesheet" href="/stylesheets/interest.css">
     <div class="row">
         <div class="col-md-6">
-            <div class="card mb-3">
+            <div class="box-shadow card mb-3">
                 <div id="campgroundCarousel" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
-                        <div class="carousel-item active">
+                        <div class="img-holder carousel-item active">
                             <img src="https://res.cloudinary.com/ntv2806/image/upload/v1663627048/YelpCamp/rhfvyv1k2lktix7jsgky.jpg"
-                                class="d-block w-100" alt="">
+                                class="img-box d-block w-100" alt="">
                         </div>
-                        <div class="carousel-item">
+                        <div class="img-holder carousel-item">
                             <img src="https://res.cloudinary.com/ntv2806/image/upload/v1663627049/YelpCamp/jqlbgkdph12qxrjp7udt.jpg"
-                                class="d-block w-100" alt="">
+                                class="img-box d-block w-100" alt="">
                         </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#campgroundCarousel"
