--- a/views/author/college.ejs
+++ b/views/author/college.ejs
@@ -1,25 +1,25 @@
 <% layout('layouts/boilerplate') %>
-
+    <link rel="stylesheet" href="/stylesheets/interest.css">
     <div class="row">
         <div class="col-md-6">
-            <div class="card mb-3">
+            <div class="box-shadow card mb-3">
                 <div id="campgroundCarousel" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
-                        <div class="carousel-item active">
+                        <div class="img-holder carousel-item active">
                             <img src="https://res.cloudinary.com/ntv2806/image/upload/v1663560798/YelpCamp/kzytdupldcuqzb0kcstu.jpg"
-                                class="d-block w-100" alt="">
+                                class="d-block w-100 img-box" alt="">
                         </div>
-                        <div class="carousel-item">
+                        <div class="img-holder carousel-item">
                             <img src="https://res.cloudinary.com/ntv2806/image/upload/v1663560798/YelpCamp/w7gncbzq6tijmojqemgd.jpg"
-                                class="d-block w-100" alt="">
+                                class="d-block w-100 img-box" alt="">
                         </div>
-                        <div class="carousel-item">
+                        <div class="img-holder carousel-item">
                             <img src="https://res.cloudinary.com/ntv2806/image/upload/v1663560798/YelpCamp/wcriva6kgknjtuktyalo.png"
-                                class="d-block w-100" alt="">
+                                class="d-block w-100 img-box" alt="">
                         </div>
-                        <div class="carousel-item">
+                        <div class="img-holder carousel-item">
                             <img src="https://res.cloudinary.com/ntv2806/image/upload/v1663560798/YelpCamp/zhipxtz2hu7c5laxmagk.jpg"
-                                class="d-block w-100" alt="">
+                                class="d-block w-100 img-box" alt="">
                         </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#campgroundCarousel"
