--- a/views/author/numberpuzzle.ejs
+++ b/views/author/numberpuzzle.ejs
@@ -1,22 +1,23 @@
 <% layout('layouts/boilerplate') %>
+    <link rel="stylesheet" href="/stylesheets/interest.css">
 
     <div class="row">
         <div class="col-md-2 offset-md-5 offset-xs-0 offset-md-0 text-center">
-            <div class="card bg-dark border-light">
+            <div class="box-shadow card bg-dark">
                 <img src="https://res.cloudinary.com/ntv2806/image/upload/v1663635675/YelpCamp/Icon_ubeouq.png"
                     class="img-thumbnail mt-2 mb-2 me-2 ms-2" alt="">
             </div>
         </div>
     </div>
     <div class="row">
-        <div class="col-md-12 text-center bg-dark mt-3">
+        <div class="col-md-12 text-center bg-dark mt-3 box-shadow">
             <h5 class="mt-3 text-white">Number Puzzle</h5>
             <p class="text-white">This app allows you to play the original 15 numbers puzzle at different setting
                 and difficulties!</p>
         </div>
     </div>
 
-    <div class="row bg-dark mt-3">
+    <div class="row bg-dark mt-2 box-shadow">
         <div class="col-md-3 mt-2 mb-2">
             <img src="https://res.cloudinary.com/ntv2806/image/upload/v1663635675/YelpCamp/img5_nm5tn2.png"
                 class="d-block w-100" alt="">
@@ -34,7 +35,7 @@
                 class="d-block w-100" alt="">
         </div>
     </div>
-    <div class="row bg-dark mb-3">
+    <div class="row bg-dark mb-3 box-shadow mt-2">
         <div class="col-md-12 mt-3 mb-3">
             <div class="card mb-6 border-light bg-dark">
                 <div class="card-body">
