--- a/views/author/info.ejs
+++ b/views/author/info.ejs
@@ -33,9 +33,9 @@
                     <li class="list-group-item text-black">
                         Majors: BS Computer Science/ BA Business
                     </li>
-                    <li class="list-group-item text-black">
+                    <!-- <li class="list-group-item text-black">
                         Height: 190cm (6'2)
-                    </li>
+                    </li> -->
                     <li class="list-group-item text-black">
                         Hometown: Hanoi, Vietnam
                     </li>
