--- a/views/author/info.ejs
+++ b/views/author/info.ejs
@@ -31,7 +31,7 @@
                         Occupation: Student
                     </li>
                     <li class="list-group-item text-black">
-                        Majors: BS Computer Science/ BA Business
+                        Majors: BS Computer Science/ BS Business Information Systems
                     </li>
                     <!-- <li class="list-group-item text-black">
                         Height: 190cm (6'2)
