--- a/views/author/viettel.ejs
+++ b/views/author/viettel.ejs
@@ -27,15 +27,19 @@
                 </div>
                 <div class="card-body bg-dark text-white border-light">
                     <h5 class="card-title">
-                        Employer: Viettel Business Solution Corporation
+                        Employer: Viettel Solutions
                     </h5>
-                    <h6>Job title: Software Engineer Internship</h6>
+                    <h6>Job title: Software Engineer Intern</h6>
                     <p class="card-text">
                         Description:
-                        <li>Developed a demo transaction app for MB bank using Kotlin on Android Studio</li>
-                        <li>Verify user through an ID card and Facial Recognition using API provided by the company and
-                            then store it on the company's database for further usage</li>
-                        <li>Familiarized with fundamental concepts for EKYC processes</li>
+                        <li>Developed a mobile banking app that digitizes new account openings, enhancing customer
+                            convenience and efficiency.</li>
+                        <li>Implemented 95% accurate OCR and facial recognition API, ensuring both fast and secure
+                            customer verification.</li>
+                        <li>Achieved a 50% reduction in account creation time by implementing efficient and streamlined
+                            processes.</li>
+                        <li>Contributed to the resolution of 10+ bugs in the backend code, enhancing application
+                            stability and overall functionality.</li>
                     </p>
                 </div>
                 <ul class="list-group list-group-flush">
@@ -46,14 +50,14 @@
                         Start date: 06/01/2022
                     </li>
                     <li class="list-group-item bg-dark text-white border-light">
-                        End date: 08/01/2022
+                        End date: 08/20/2022
                     </li>
                 </ul>
             </div>
         </div>
 
         <div class="col-md-6">
-            <h1>Viettel Business Solution Corp</h1>
+            <h1>Viettel Solutions</h1>
             <h3>Hanoi, Vietnam</h3>
             <div id='map'></div>
         </div>
