--- a/views/author/uni.ejs
+++ b/views/author/uni.ejs
@@ -37,11 +37,12 @@
                     <h5 class="card-title">
                         Employer: University of Rochester
                     </h5>
-                    <h6>Job title: Teaching Assistant (ECON 207)</h6>
+                    <h6>Job title: Teaching Assistant</h6>
                     <p class="card-text">
                         Description:
-                        <li>Helped peers to learn classroom material and study for exams</li>
-                        <li>Trained ability to convey ideas and communicate clearly</li>
+                        <li>Courses: Mobile App Development (Spring 2023), Intermediate Microeconomics (Fall 2022).</li>
+                        <li>Led weekly study sessions/office hours of 30 students to cover learning materials in course
+                            lectures and assignments.</li>
                     </p>
                 </div>
                 <ul class="list-group list-group-flush">
@@ -49,10 +50,10 @@
                         Location: Rochester, New York
                     </li>
                     <li class="list-group-item bg-dark text-white border-light">
-                        Start date: 01/10/2022
+                        Start date: 09/01/2022
                     </li>
                     <li class="list-group-item bg-dark text-white border-light">
-                        End date: 05/20/2022
+                        End date: 05/01/2023
                     </li>
                 </ul>
             </div>
